minor alignment fix

--- a/shared/ui/styles/stream.less
+++ b/shared/ui/styles/stream.less
@@ -1201,7 +1201,7 @@
 							border-radius: 9px;
 							font-size: 12px;
 							padding-top: 0;
-							top: 3px;
+							top: 2px;
 							right: 8px;
 							width: 25px;
 							height: 18px;
